exemplos/simul-shop/istio/11/catalogue-dr-vs.yaml
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: catalogue
spec:
  host: catalogue
  subsets:
    - labels:
        version: v1
      name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /catalogue
    rewrite:
      uri: /
    route:
    - destination:
        host: catalogue # FQDN completo ou abreviado
        subset: v1
