exemplos/simul-shop/istio/11/front-end-destination-rules.yaml
---
# Define quais PODs fazem parte de cada subconjunto (subset)
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: front-end-drs # Qualquer nome.
  namespace: default
spec:
  host: front-end # k8s service name, FQDN ou abriaviado.
  subsets:
    - labels: # Seletor
        version: v1 # PODs do serviço front-end.default.svc.cluster.local com o label version: v1 fazem parte desse subconjunto
      name: v1 # Qualquer nome, mas que represente o subconjunto.
    - labels: # Seletor
        version: v2 # Da mesma forma, PODs do mesmo serviço (host = k8s service) com o label version: v2 fazem parte desse subconjunto
      name: v2 # Qualquer nome, mas que represente o subconjunto, nesse caso PODs da versao dois.
