exemplos/simul-shop/istio/11/front-end-dr-vs.yaml
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: front-end
  namespace: default
spec:
  host: front-end
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /front-end
    rewrite:
      uri: /
    route:
    - destination:
        host: front-end # FQDN completo ou abreviado
        subset: v1
  - route: # <-- rota padrão
    - destination:
        host: front-end 
        subset: v1
