exemplos/simul-shop/istio/11/front-end-multi-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
  - default-gateway
  http:
  - match:  # <--- Regra #1: user-regio=Southeast e uri iniciando em /front-end
    - uri:
        prefix: /front-end
      headers:
        user-region:
          exact: Southeast
    rewrite:
      uri: /
    route:
    - destination:
        host: front-end
        subset: v2
  - match: # <--- Regra #2: uri iniciando em /front-end
    - uri:
        prefix: /front-end
    rewrite:
      uri: /
    route:
    - destination:
        host: front-end
        subset: v1     
  - route: # Rota padrão - nenhuma das anteriores
    - destination:
        host: front-end
        subset: v1
