exemplos/simul-shop/istio/11/front-end-route-header-vs.yaml
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: front-end
spec:
  host: front-end
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
  - default-gateway
  http:
  - match: # <---- Regra 1
    - headers:
        user-region:
          exact: Southeast
    route:
    - destination:
        host: front-end
        subset: v2
  - route: # <---- Rota padrão
    - destination:
        host: front-end
        subset: v1
