exemplos/simul-shop/istio/11/front-end-route-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
  - default-gateway
  http:
  - match: # <---- Regra 1
    - headers:
        user-region:
          exact: Southeast
    route:
    - destination:
        host: front-end
        subset: v2
  - route: # <---- Rota padrão
    - destination:
        host: front-end
        subset: v1
