exemplos/simul-shop/istio/11/front-end-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: front-end
        subset: v1
