exemplos/simul-shop/istio/11/login-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login
spec:
  hosts:
  - login
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: login
        subset: v1
    retries:
      attempts: 10
      perTryTimeout: 3s
