exemplos/simul-shop/istio/11/login-timeout-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login
  namespace: default
spec:
  hosts:
    - login
  http:
  - route:
    - destination:
        host: login # FQDN completo ou abreviado
        subset: v1
    timeout: 10s
