exemplos/simul-shop/istio/11/orders-mirror-dr-vs.yaml
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: orders
spec:
  host: orders
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-mirror
spec:
  hosts:
    - orders
  http:
  - route:
    - destination:
        host: orders
        subset: v1
      weight: 100
    mirror:
      host: orders
      subset: v2
