exemplos/simul-shop/istio/11/simul-shop-route-path.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simulshop-routes
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /login
    rewrite:
      uri: /
    route:
    - destination:
        host: login # FQDN completo ou abreviado
        subset: v1
  - match:
    - uri:
        prefix: /catalogue
    rewrite:
      uri: /
    route:
    - destination:
        host: catalogue # FQDN completo ou abreviado
        subset: v1
  - route: # <-- rota padrão
    - destination:
        host: front-end 
        subset: v1
